# hsft

./: CHANGELOG.md  LICENSE  README.Rmd  README.md  hsft.cabal
app/: Colorizer.hs  Config.hs  DataTypes.hs  Fetch.hs  Line.hs  Main.hs  Render.hs  Utils.hs
app/Info/: Cmd.hs  Cpu.hs  DiskUsage.hs  Editor.hs  Hostname.hs  Kernel.hs  Os.hs  Shell.hs  ShellCommand.hs  Terminal.hs  Uptime.hs  User.hs  Wm.hs
